<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="57dp"
        android:text="@string/tewnty_eight"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

    <Button
        android:id="@+id/celplus"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginBottom="123dp"
        android:background="#5599FF"
        android:onClick="addCelsiusTap"
        android:text="@string/celadd"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/celminus"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="138dp"
        android:layout_marginLeft="138dp"
        android:layout_marginBottom="123dp"
        android:background="#5599FF"
        android:onClick="subCelsiusTap"
        android:text="@string/celsub"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/humidplus"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="255dp"
        android:layout_marginLeft="255dp"
        android:layout_marginBottom="123dp"
        android:onClick="addHumidityTap"
        android:text="@string/huiadd"
        android:textSize="17sp"
        android:background="#5599FF"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/humidminus"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="345dp"
        android:layout_marginRight="345dp"
        android:layout_marginBottom="123dp"
        android:onClick="subHumidityTap"
        android:text="@string/huisub"
        android:textSize="17sp"
        android:background="#5599FF"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/comp"
        android:layout_width="102dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:layout_marginBottom="123dp"
        android:background="#5599FF"
        android:onClick="compTap"
        android:text="@string/comp"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="102dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="123dp"
        android:onClick="resetTap"
        android:text="@string/reset"
        android:textSize="17sp"
        android:background="#5599FF"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/textViewCel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="140dp"
        android:text="@string/degcel"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textViewHui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="271dp"
        android:layout_marginLeft="271dp"
        android:layout_marginTop="140dp"
        android:text="@string/hui"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textViewHi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="193dp"
        android:layout_marginRight="193dp"
        android:text="@string/hi"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="288dp"
        android:layout_marginLeft="288dp"
        android:layout_marginTop="57dp"
        android:text="@string/fifty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:text="@string/hival"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

</RelativeLayout>
